feat: add artist naming foundation (#75)
